--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Hand+Pre:wght@400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
 
@@ -12,35 +22,35 @@
     <header>
         <Ul>
             <li>
-                <a href="/index.html">WEBSTUDIO</a>
+                <a href="/index.html" class="logo">WEB<span class="logoSpan">STUDIO</span></a>
             </li>
             <li>
-                <a href="#studio">Studio</a>
+                <a href="#studio" class="nav-link">Studio</a>
             </li>
             <li>
-                <a href="#Portfolio">Potfolio</a>
+                <a href="#Portfolio" class="nav-link">Potfolio</a>
             </li>
             <li>
-                <a href="#Contacts">Contacts</a>
+                <a href="#Contacts" class="nav-link">Contacts</a>
             </li>
         </Ul>
         <address>
             <Ul>
                 <li>
-                    <a hreh="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="adressLine">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111" class="adressLine">+11(000)111-11-11</a>
                 </li>
             </Ul>
         </address>
     </header>
     <main>
-        <section>
+        <section class="section-1">
             <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+            <button type="button" id="orderButton">Order Service</button>
         </section>
-        <section>
+        <section class="section-2">
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -60,7 +70,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="section-3">
             <h2>Our Team</h2>
             <ul>
                 <li>
@@ -74,7 +84,7 @@
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img scr="./images/camilaGarcia.jpg" width="264" height="260">
+                    <img src="./images/camilaGarcia.jpg" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
@@ -85,10 +95,45 @@
                 </li>
             </ul>
         </section>
+        <section class="section-4">
+            <h2>Our Porfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/bank.jpg" width="360" height="300">
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/marketing.jpg" width="360" height="300">
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/meditation.jpg" width="360" height="300">
+                    <h3>Meditation App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/taxi.jpg" width="360" height="300">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/screen.jpg" width="360" height="300">
+                    <h3>Screen Illustartions</h3>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/courses.jpg" width="360" height="300">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                </li>
+            </ul>
+        </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="page-footer">
+        <a href="./index.html" class="logo">Web<span class="logoSpan-2">Studio</span></a>
+        <p class="bottom-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 
