--- a/index.html
+++ b/index.html
@@ -13,38 +13,51 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
 
 <body>
+
     <header>
-        <Ul>
-            <li>
-                <a href="/index.html" class="logo">WEB<span class="logoSpan">STUDIO</span></a>
-            </li>
-            <li>
-                <a href="#studio" class="nav-link">Studio</a>
-            </li>
-            <li>
-                <a href="#Portfolio" class="nav-link">Potfolio</a>
-            </li>
-            <li>
-                <a href="#Contacts" class="nav-link">Contacts</a>
-            </li>
-        </Ul>
-        <address>
+        <div class="header-container">
+            <Ul class="page-header">
+                <div class="menu-nav">
+                    <li>
+                        <a href="/index.html" class="logo">WEB<span class="logoSpan">STUDIO</span></a>
+                    </li>
+
+
+                    <li>
+                        <a href="#studio" class="nav-link">Studio</a>
+                    </li>
+                    <li>
+                        <a href="#Portfolio" class="nav-link">Potfolio</a>
+                    </li>
+                    <li>
+                        <a href="#Contacts" class="nav-link">Contacts</a>
+                    </li>
+                </div>
+            </Ul>
+
+            <address>
             <Ul>
+                <div class="address-info">
                 <li>
                     <a href="mailto:info@devstudio.com" class="adressLine">info@devstudio.com</a>
                 </li>
                 <li>
                     <a href="tel:+110001111111" class="adressLine">+11(000)111-11-11</a>
                 </li>
+                </div>
             </Ul>
         </address>
+        </div>
     </header>
+
+
     <main>
         <section class="section-1">
             <h1>Effective Solutions for Your Business</h1>
