--- a/index.html
+++ b/index.html
@@ -13,127 +13,222 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
 
 <body>
-    <header>
-        <Ul>
-            <li>
-                <a href="/index.html" class="logo">WEB<span class="logoSpan">STUDIO</span></a>
-            </li>
-            <li>
-                <a href="#studio" class="nav-link">Studio</a>
-            </li>
-            <li>
-                <a href="#Portfolio" class="nav-link">Potfolio</a>
-            </li>
-            <li>
-                <a href="#Contacts" class="nav-link">Contacts</a>
-            </li>
-        </Ul>
-        <address>
+    <header class="page-header">
+        <div class="to-be-assigned">
+            <div class="main-nav">
+                <Ul>
+
+                    <div class="page-nav">
+                        <li>
+                            <a href="/index.html" class="logo">WEB<span class="logoSpan">STUDIO</span></a>
+                        </li>
+                        <li>
+                            <a href="#studio" class="nav-link">Studio</a>
+                        </li>
+                        <li>
+                            <a href="#Portfolio" class="nav-link">Potfolio</a>
+                        </li>
+                        <li>
+                            <a href="#Contacts" class="nav-link">Contacts</a>
+                        </li>
+                    </div>
+                </Ul>
+                <address>
             <Ul>
+                <div class="page-contacts">
                 <li>
                     <a href="mailto:info@devstudio.com" class="adressLine">info@devstudio.com</a>
                 </li>
                 <li>
                     <a href="tel:+110001111111" class="adressLine">+11(000)111-11-11</a>
                 </li>
+                </div>
             </Ul>
         </address>
+            </div>
+        </div>
     </header>
     <main>
+
         <section class="section-1">
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button" id="orderButton">Order Service</button>
+            <div class="container banner">
+                <h1 class="main-header">Effective Solutions <br>for Your Business</h1>
+                <button type="button" class="orderButton">Order Service</button>
+            </div>
         </section>
+
         <section class="section-2">
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
-                </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                </li>
-            </ul>
+            <div class="section-content">
+                <ul>
+                    <div class="section-2-list">
+                        <li>
+                            <div class="section-2-card">
+                                <div class="section-2-card-header">
+                                    <h3>Strategy</h3>
+                                </div>
+                                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="section-2-card">
+                                <div class="section-2-card-header">
+                                    <h3>Punctuality</h3>
+                                </div>
+                                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="section-2-card">
+                                <div class="section-2-card-header">
+                                    <h3>Diligence</h3>
+                                </div>
+                                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="section-2-card">
+                                <div class="section-2-card-header">
+                                    <h3>Technologies</h3>
+                                </div>
+                                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                            </div>
+                        </li>
+                    </div>
+                </ul>
+            </div>
         </section>
         <section class="section-3">
-            <h2>Our Team</h2>
-            <ul>
-                <li>
-                    <img src="./images/markGurrero.jpg" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/tomFord.jpg" width="264" height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/camilaGarcia.jpg" width="264" height="260">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/danielWilson.jpg" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
+            <div class="section-3-content">
+                <div class="section-3-header">
+                    <h2>Our Team</h2>
+                </div>
+                <ul>
+                    <div class="section-3-list">
+                        <li>
+                            <div class="section-3-list-card">
+                                <img src="./images/markGurrero.jpg" width="264" height="260">
+                                <div class="section-3card-content">
+                                    <h3 class="team-card-header">Mark Guerrero</h3>
+                                    <p>Product Designer</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="section-3-list-card">
+                                <img src="./images/tomFord.jpg" width="264" height="260">
+                                <div class="section-3card-content">
+                                    <h3>Tom Ford</h3>
+                                    <p>Frontend Developer</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="section-3-list-card">
+                                <img src="./images/camilaGarcia.jpg" width="264" height="260">
+                                <div class="section-3card-content">
+                                    <h3>Camila Garcia</h3>
+                                    <p>Marketing</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="section-3-list-card">
+                                <img src="./images/danielWilson.jpg" width="264" height="260">
+                                <div class="section-3card-content">
+                                    <h3>Daniel Wilson</h3>
+                                    <p>UI Designer</p>
+                                </div>
+                            </div>
+                        </li>
+                    </div>
+                </ul>
+            </div>
         </section>
         <section class="section-4">
-            <h2>Our Porfolio</h2>
-            <ul>
-                <li>
-                    <img src="./images/bank.jpg" width="360" height="300">
-                    <h3>Banking App</h3>
-                    <p>App</p>
-                </li>
-                <li>
-                    <img src="./images/marketing.jpg" width="360" height="300">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/meditation.jpg" width="360" height="300">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
-                </li>
-                <li>
-                    <img src="./images/taxi.jpg" width="360" height="300">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/screen.jpg" width="360" height="300">
-                    <h3>Screen Illustartions</h3>
-                    <p>Design</p>
-                </li>
-                <li>
-                    <img src="./images/courses.jpg" width="360" height="300">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
-                </li>
-            </ul>
+            <div class="section-4-container">
+                <div class="section-4-header">
+                    <h2>Our Porfolio</h2>
+                </div>
+                <ul>
+                    <div class="section-4-list">
+                        <li>
+                            <div class="section-4-list-card">
+                                <img src="./images/bank.jpg" width="360" height="300">
+                                <div class="section-4-card-content">
+                                    <h3>Banking App</h3>
+                                    <p>App</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="section-4-list-card">
+                                <img src="./images/marketing.jpg" width="360" height="300">
+                                <div class="section-4-card-content">
+                                    <h3>Cashless Payment</h3>
+                                    <p>Marketing</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="section-4-list-card">
+                                <img src="./images/meditation.jpg" width="360" height="300">
+                                <div class="section-4-card-content">
+                                    <h3>Meditation App</h3>
+                                    <p>App</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="section-4-list-card">
+                                <img src="./images/taxi.jpg" width="360" height="300">
+                                <div class="section-4-card-content">
+                                    <h3>Taxi Service</h3>
+                                    <p>Marketing</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="section-4-list-card">
+                                <img src="./images/screen.jpg" width="360" height="300">
+                                <div class="section-4-card-content">
+                                    <h3>Screen Illustartions</h3>
+                                    <p>Design</p>
+                                </div>
+                            </div>
+
+                        </li>
+                        <li>
+                            <div class="section-4-list-card">
+                                <img src="./images/courses.jpg" width="360" height="300">
+                                <div class="section-4-card-content">
+                                    <h3>Online Courses</h3>
+                                    <p>Marketing</p>
+                                </div>
+                            </div>
+                        </li>
+                    </div>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="page-footer">
-        <a href="./index.html" class="logo">Web<span class="logoSpan-2">Studio</span></a>
-        <p class="bottom-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <a href="./index.html" class="logo">Web<span class="logoSpan-2">Studio</span></a>
+                </div>
+                <div class="footer-decription">
+                    <p class="bottom-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
